...
        android:layout_height="16dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_app_logo_orange_dark"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/portfolio_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/widget_portfolio_name"
...
